# roam-mcp

./: .gitignore  README.md  pyproject.toml
mcp_roam/: __init__.py  _code_tools.py  _tools.py  capture.py  code.py  context.py  domain.py  embeddings.py  files.py  interfaces.py  llm.py  prompts.py  repo.py  research.py  search_http.py  segmenter.py  server.py  youtube.py
tests/: test_code.py
