[project]
name = "mcp-roam"
version = "0.1.0"
description = "MCP server for org-roam — bridge OpenCode to your knowledge graph"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0",
    "sqlite-vec>=0.1.6",
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.25",
    "tree-sitter-typescript>=0.23",
    "watchfiles>=1.0",
]

[project.scripts]
mcp-roam = "mcp_roam.server:main"
roam-search = "mcp_roam.search_http:main"
